# CreateShapesMaya

./: .gitignore  CMakeLists.txt  README.md
modules/: FindMaya.cmake
src/: CMakeLists.txt  Commons.h  GLCP.h  ShapeGenerator.cpp  ShapeGenerator.h  createShapes.cpp  createShapes.h  createShapesDrawAgent.cpp  createShapesDrawAgent.h  createShapesDrawAgentCoreProfile.cpp  createShapesDrawAgentCoreProfile.h  createShapesDrawAgentGL.cpp  createShapesDrawAgentGL.h  createShapesDrawOverride.cpp  createShapesDrawOverride.h  pluginMain.cpp
